# conveyor_sim_ros2

./: LICENSE  README.md  conveyor_generator.md  package.xml  setup.cfg  setup.py
config/: conveyor_gz_ros_bridge.yaml
conveyor_sim_ros2/: conveyor_control.py
launch/: conveyor_sim.launch.py  static_transforms.launch.py
models/Depot/: model.config  model.sdf
models/Depot/meshes/: Crates.dae
models/bracket/: model.config  model.sdf
models/dual_camera_bar/: model.config  model.sdf
models/lidar_3d/: model.config  model.sdf
models/lidar_3d/meshes/: lidar_3d_v1.dae
models/realsense_d435/: model.config
models/realsense_d435/meshes/: realsense.dae
models/simple_conveyor/: model.config  model.sdf
models/simple_conveyor_box/: model.config  model.sdf
models/storage_bin/: metadata.pbtxt  model.config  model.sdf
models/textured_conveyor/: model.config  model.sdf
models/textured_conveyor/materials/scripts/: model.material
rviz/: warehouse.rviz
scripts/: conveyor_generator.py
worlds/: conveyor.world  warehouse.world
